--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -203,25 +203,25 @@ form.input-group {
 
 /* SECCION - FORO */
 
+.container-foro{
+display: flex;
+padding: 30px;
+flex-direction: row;
+flex-wrap: wrap;
+}
+.foro-item{
+    padding: 30px;
+    flex: 50%;
+}
+
 .img-foro{
     width: 100%;
     height: 100%;
 }
-.container-foro{
-    padding: 2rem 0 2rem 2rem;
-    display:flex ;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-}
-.foro-item{
-    flex:50%;
-}
 .foro-description{
     
     font-family:Helvetica, sans-serif;
-    font-size: 10px;
+    font-size: 25px;
 }
 .foro-title-inf{
     font-weight: 100px;
@@ -230,11 +230,25 @@ form.input-group {
 }
 
 .foro-title-sup{
+    margin-top: 15px;
     font: weight 100px; 
     font-family: Arial, Helvetica, sans-serif;
 }
+@media (max-width:600px){
+    .foro-item{
+        flex: 100%;
+    }
+    
+    
+}
 
 /*FIN SECCION FORO */
+
+
+
+
+
+
 
 
 
