--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -71,7 +71,7 @@ form.input-group {
   }
   
   .button--submit-news:hover {
-    background-color: #1d1d80;
+    background-color: #ffffff98;
   }
   
   .input-group__email:focus, .input-group__email:focus-visible {
