--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -55,7 +55,7 @@
                           <div class="aviso"></div>
 
                         </div>
-                        <a href="../index.html"><button id="btn-login" class="btn mt-4"
+                        <a href="../view/index.html"><button id="btn-login" class="btn mt-4"
                             type="submit"><span>Ingresar</span></button></a>
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
