--- a/view/cart.html
+++ b/view/cart.html
@@ -79,7 +79,7 @@
   <!-- Header / nav -->
   <!-- ================================== -->
   <div class="cart-container">
-    <div class="col-12 d-flex justify-content-center ">
+    <div class=" cart-wrap col-12 d-flex justify-content-center ">
 
       <!-- Carrito -->
       <div class="carrito-container col-5 mt-5  pt-2">
