--- a/view/css/cart.css
+++ b/view/css/cart.css
@@ -63,3 +63,10 @@
     height: 35px;
     border-radius: 100%;
    }
+
+@media (max-width: 767px) {
+    .cart-wrap {
+        flex-direction: column;
+        align-items: center;
+    }
+}
