--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -81,3 +81,12 @@
 .btn-seccion:hover::before {
   transform: translate3d(100%, 0, 0);
 }
+
+
+@media (max-width: 1200px) {
+  .cat-container{
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+}
