--- a/view/shipping.html
+++ b/view/shipping.html
@@ -54,22 +54,22 @@
             <a href="../index.html">HOME</a>
           </li>
           <li class="nav-item p-2">
-            <a href="view/clima.html">CLIMA</a>
+            <a href="clima.html">CLIMA</a>
           </li>
           <li class="nav-item p-2">
-            <a href="view/calendarios.html">CALENDARIO</a>
+            <a href="calendarios.html">CALENDARIO</a>
           </li>
           <li class="nav-item p-2">
-            <a href="view/shop.html">E-SHOP</a>
+            <a href="shop.html">E-SHOP</a>
           </li>
           <li class="nav-item p-2">
-            <a href="view/foro.html">FORO</a>
+            <a href="foro.html">FORO</a>
           </li>
           <li class="nav-item py-2">
-            <a href="view/blog.html">BLOG</a>
+            <a href="blog.html">BLOG</a>
           </li>
           <li class="nav-item p-2">
-            <a href="view/contacto.html">CONTACTO</a>
+            <a href="contacto.html">CONTACTO</a>
           </li>
   
         </ul>
@@ -86,13 +86,13 @@
         <!-- navlink -->
         <ul class="nav nav-pills mb-3 nav-justified">
           <li class="nav-item">
-            <a class="nav-link" href="/checkout.html"><i class="bi bi-person-circle me-2"></i>Datos</a>
+            <a class="nav-link" href="checkout.html"><i class="bi bi-person-circle me-2"></i>Datos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/envio.html"><i class="bi bi-box-seam me-2"></i>Envio</a>
+            <a class="nav-link active" href="envio.html"><i class="bi bi-box-seam me-2"></i>Envio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/payment.html"><i class="bi bi-credit-card me-2"></i>Pago</a>
+            <a class="nav-link" href="payment.html"><i class="bi bi-credit-card me-2"></i>Pago</a>
           </li>
         </ul>
         <!-- navlink ends -->
