--- a/view/css/checkout.css
+++ b/view/css/checkout.css
@@ -103,3 +103,10 @@
     height: 35px;
     border-radius: 100%;
    }
+
+   @media (max-width:992px){
+    .checkout-container{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+   }
