--- a/view/css/shipping.css
+++ b/view/css/shipping.css
@@ -161,3 +161,11 @@ input[type="radio"]:checked + label:after {
     height: 35px;
     border-radius: 100%;
    }
+
+
+   @media (max-width:992px){
+    .checkout-container{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+   }
