cambio de rutas

--- a/view/contacto.html
+++ b/view/contacto.html
@@ -69,22 +69,22 @@
             <a href="../index.html">HOME</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/clima.html">CLIMA</a>
+            <a href="clima.html">CLIMA</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/calendarios.html">CALENDARIO</a>
+            <a href="calendarios.html">CALENDARIO</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/shop.html">E-SHOP</a>
+            <a href="shop.html">E-SHOP</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/foro.html">FORO</a>
+            <a href="foro.html">FORO</a>
           </li>
           <li class="nav-item py-2">
-            <a href="../view/blog.html">BLOG</a>
+            <a href="blog.html">BLOG</a>
           </li>
           <li class="nav-item p-2">
-            <a href="../view/contacto.html">CONTACTO</a>
+            <a href="contacto.html">CONTACTO</a>
           </li>
   
         </ul>
@@ -131,7 +131,7 @@
     <div class="row">
 
       <div class="col">
-        <img src="/view/images/identidad/El-anzuelo-icono.png" alt="">
+        <img src="images/identidad/El-anzuelo-icono.png" alt="">
       </div>
 
 
