--- a/view/payment.html
+++ b/view/payment.html
@@ -54,22 +54,22 @@
                 <a href="../index.html">HOME</a>
               </li>
               <li class="nav-item p-2">
-                <a href="view/clima.html">CLIMA</a>
+                <a href="clima.html">CLIMA</a>
               </li>
               <li class="nav-item p-2">
-                <a href="view/calendarios.html">CALENDARIO</a>
+                <a href="calendarios.html">CALENDARIO</a>
               </li>
               <li class="nav-item p-2">
-                <a href="view/shop.html">E-SHOP</a>
+                <a href="shop.html">E-SHOP</a>
               </li>
               <li class="nav-item p-2">
-                <a href="view/foro.html">FORO</a>
+                <a href="foro.html">FORO</a>
               </li>
               <li class="nav-item py-2">
-                <a href="view/blog.html">BLOG</a>
+                <a href="blog.html">BLOG</a>
               </li>
               <li class="nav-item p-2">
-                <a href="view/contacto.html">CONTACTO</a>
+                <a href="contacto.html">CONTACTO</a>
               </li>
       
             </ul>
@@ -87,10 +87,10 @@
             <div class="p-3 p-lg-5  form-container">
                 <ul class="nav nav-pills mb-3 nav-justified">
                     <li class="nav-item">
-                        <a class="nav-link" href="/checkout.html"><i class="bi bi-person-circle me-2"></i>Datos</a>
+                        <a class="nav-link" href="./checkout.html"><i class="bi bi-person-circle me-2"></i>Datos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/shipping.html"><i class="bi bi-box-seam me-2"></i>Envio</a>
+                        <a class="nav-link" href="./shipping.html"><i class="bi bi-box-seam me-2"></i>Envio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#"><i class="bi bi-credit-card me-2"></i>Pago</a>
@@ -309,7 +309,7 @@
           <div class="row">
     
             <div class="col">
-              <img src="/view/images/identidad/El-anzuelo-icono.png" alt="">
+              <img src="images/identidad/El-anzuelo-icono.png" alt="">
             </div>
     
     
