--- a/view/cart.html
+++ b/view/cart.html
@@ -266,7 +266,7 @@
         <div class="row">
   
           <div class="col">
-            <img src="/view/images/identidad/El-anzuelo-icono.png" alt="">
+            <img src="./images/identidad/El-anzuelo-icono.png" alt="">
           </div>
   
   
