--- a/view/css/product.css
+++ b/view/css/product.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.card-product{
+  margin-bottom: 3rem;
+  margin-top: 2rem;
+}
+
 /* Slide Product */
 .product-galeria {
   background-color: #fff;
